Incorporate changes from the stage to the master branch (#12)
* create empty branch

* fix: unlocking account catch

* fix: critical bugs, styles

* fix: menu

* fix: menu links styles

* fix: important bugs and visual

* fix: burner wallet login

* fix: texts

* fix: empty metamask stuck

* fix: nax deposit, unlock icon

* fix: fee on maxvalue, fee on single token

* fix: max deposit fee

* fix: small balances

* fix: max value btn

* fix: max value, close modal

* fix: gas

* fix: token then address

* fix: diff err for tx types

* fix: tx addresses

* fix: update, links

* fix: stage one

* feat: stage two

* feat: stage three

* feat: stage three fixes

* fix: errors

* feat: confirm count

* feat: add Bugsnag

* fix: tokeninfo

* fix(jsx): incossistent `transform` attribute

* fix: awaited bug

* fix: alpha to beta

* fix: bugs

* fix: rm hardcoded

* Split the build script for the smaller pieces

* Add .env files for all environments
* Make project names more consistent
* Refactor Dockerfile
* Update vulnerable dependencies
* Sync dependencies lock file
* Add deploy scheme to the README
* Add webpack compression plugin

* Add missing comma

* Add a new job to the bamboo specs

* Enable static code analysis

* Update lighthouse analysis script

* do not cache anything in browser

* hardcode nocache on top level

* fix: dyn import `Portis` to defer large network payloads

* feat: set all env vars

Pass new environment variables to the build stage

fix: size

fix: add prefix

fix: typing

fix: criticals

fix: comments

fix: contacts

fix: config

fix: reports

* fix: hotfixes

* fix(build): pass correct build params

* fix(build): pass correct build params

* feat: updating modal message on first-time Metamask sign-up
chore(tsconfig.json): tuned some options

* fix(build): pass correct build params

* fix: texts, styles

* fix: styles

* fi

--- a/.dockerignore
+++ b/.dockerignore
@@ -110,7 +110,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+#.env
 
 # next.js build output
 .next
@@ -177,3 +177,9 @@ yarn.lock
 README.md
 LICENSE
 bamboo-specs
+commitlint.config.js
+.prettierrc.js
+.github
+.gitignore
+.dockerignore
+Dockerfile
