--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -24,7 +25,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.env*
-.cache
 .firebase/
 .vscode/
+
+# cache
+.cache
+.brotli_cache/
+.gzip_cache/
+.assets_cache/
+.buildx-cache/
+.reports/
