--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "imagemin-webpack-plugin": "^2.4.2",
+    "imagemin-webp-webpack-plugin": "^3.3.2",
+    "@bugsnag/js": "^7.1.1",
+    "@bugsnag/plugin-react": "^7.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@lottiefiles/lottie-player": "^0.5.1",
     "@portis/web3": "^2.0.0-beta.54",
     "@types/yargs": "^15.0.4",
-    "@walletconnect/web3-provider": "^1.0.0-beta.47",
+    "@walletconnect/web3-provider": "^1.0.11",
     "@web3-react/core": "^6.0.9",
     "@web3-react/injected-connector": "^6.0.7",
     "antd": "^3.26.7",
@@ -17,25 +21,27 @@
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "^4.0.47",
     "fortmatic": "^1.1.3",
+    "jsbi": "^3.1.3",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
     "qrcode-generator": "^1.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
+    "react-typing-effect": "^2.0.3",
     "web3": "^1.2.7",
-    "zksync": "^0.5.7"
+    "zksync": "^0.5.14"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack",
     "test": "echo \"Not implemented.\"",
     "format": "prettier --write",
-    "lint-ts": "eslint --fix",
-    "lint-css": "stylelint --fix",
-    "deploy_hosting": "firebase deploy --only hosting --project master",
-    "deploy_hosting_production": "firebase deploy --only hosting --project production",
+    "lint-ts": "eslint --fix \"**/*.ts\"",
+    "lint-css": "stylelint --fix \"**/*.scss\"",
+    "deploy_hosting": "firebase deploy --only hosting --project ${FIREBASE_PROJECT:?firebase project name not set or empty}",
     "audit_dependencies": "npm audit --package-lock-only --audit-level critical --json | npm-audit-html --output audit.html",
     "check_licenses": "license-checker --json > licenses.json"
   },
@@ -147,7 +153,7 @@
     "license-checker": "25.0.1",
     "lint-staged": "^10.0.9",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "npm-audit-html": "1.4.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
@@ -165,6 +171,7 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0",
+    "compression-webpack-plugin": "^4.0.0"
   }
 }
